# polyculture_paper_code

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
school_data_exps/data/: cleaned_data.csv  data_cleaning.ipynb  no_gpa_3_cleaned_data.csv
school_data_exps/data/ELS_data/BYF3PSTSU/: descriptions.txt  labels.txt
school_data_exps/models/: model_training.ipynb
school_data_exps/models/pretrained_models/gb/: gb_model_0.pkl  gb_model_1.pkl  gb_model_10.pkl  gb_model_100.pkl  gb_model_101.pkl  gb_model_102.pkl  gb_model_103.pkl  gb_model_104.pkl  gb_model_105.pkl  gb_model_106.pkl  gb_model_107.pkl  gb_model_108.pkl  gb_model_109.pkl  gb_model_11.pkl  gb_model_110.pkl  gb_model_111.pkl  gb_model_112.pkl  gb_model_113.pkl  gb_model_114.pkl  gb_model_115.pkl  gb_model_116.pkl  gb_model_117.pkl  gb_model_118.pkl  gb_model_119.pkl  gb_model_12.pkl  gb_model_120.pkl  gb_model_121.pkl  gb_model_122.pkl  gb_model_123.pkl  gb_model_124.pkl  gb_model_125.pkl  gb_model_126.pkl  gb_model_127.pkl  gb_model_128.pkl  gb_model_129.pkl  gb_model_13.pkl  gb_model_130.pkl  gb_model_131.pkl  gb_model_132.pkl  gb_model_133.pkl  (+160 more)
school_data_exps/models/pretrained_models/log/: log_model_0.pkl  log_model_1.pkl  log_model_10.pkl  (+197 more)
school_data_exps/simulations/: enrollment_simulations.ipynb  simulation_plots.ipynb
synthetic_experiments/: synth.ipynb
synthetic_experiments/plots/: blind-aware-poly-N16-T400.npy  blind-aware-poly-N2-T400.npy  blind-aware-poly-N4-T400.npy  blind-aware-poly-N8-T400.npy  group_proportion_data-4000.npy  legacy_quality_data-4000.npy
(+550 files in other folders)
