[project]
name = "school-comp-exps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=6.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "matplotlib==3.8.0",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "scikit-learn==1.2.2",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost==2.1.2",
]
